--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt-middleware": "^1.0.3",
     "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "nodemon": "^2.0.3",
